feat: amend JSON file usage, add Formspree

--- a/src/partials/section-about.html
+++ b/src/partials/section-about.html
@@ -1,10 +1,31 @@
-<section
-  id="about"
-  aria-labelledby="about-title"
-  class="scroll-mt-10 border-b"
->
-  <div class="container">
-    {{> section-title id="about-title" title="About Us" }}
-    Here goes about content
+<div class="grid lg:grid-cols-2 gap-32 items-center">
+  <div>
+    <img
+      class="rounded-xl !m-0"
+      src="/images/hero-img.png"
+      alt="About us image"
+      loading="lazy"
+    />
   </div>
-</section>
+  <div
+    class="grid gap-6 place-items-center text-center lg:text-left lg:place-items-start"
+  >
+    <!-- prettier-ignore -->
+    <div class="grid gap-3">
+          {{> subtitle text="Who We Are"}} 
+          {{> title text="A little bit about us"}}
+       </div>
+    <p class="max-w-md !m-0">
+      Brightwave Marketing was founded with one goal: to help ambitious brands
+      turn ideas into unforgettable experiences. With a blend of creativity,
+      data-driven insights, and strategic thinking, we craft campaigns that
+      spark real results.
+    </p>
+    <p class="!m-0 font-bold">What we can help you with:</p>
+    <ul class="!m-0 list-none lg:list-disc">
+      <li>Custom marketing strategies for every stage of growth</li>
+      <li>Award-winning creative and content production</li>
+      <li>Transparent reporting and measurable results</li>
+    </ul>
+  </div>
+</div>
