--- a/src/styles/tailwind-config.css
+++ b/src/styles/tailwind-config.css
@@ -15,9 +15,9 @@
   @apply ps-4 pe-4 sm:ps-6 sm:pe-6 md:ps-8 md:pe-8;
 }
 
-/* Remove this - only applied to empty boilerplate to allow scrolling on menu click! */
+/* You may want to tweak this, this gives top and bottom padding to each section container */
 .container:not(header .container) {
-  @apply py-32;
+  @apply py-24;
 }
 
 @theme {
@@ -38,12 +38,6 @@
   --color-gray-950: oklch(12.96% 0.027 261.69);
 }
 
-/* example of how to customise the typography plugin settings */
-.prose-gray {
-  --tw-prose-headings: var(--color-gray-950);
-  --tw-prose-body: var(--color-gray-800);
-}
-
 /* dark mode styling example - uncomment if you want to use dark mode */
 /* @media (prefers-color-scheme: dark) {
   *,
@@ -53,9 +47,18 @@
   ::file-selector-button {
     border-color: var(--color-gray-800, currentColor);
   }
-
-  .prose-gray {
-    --tw-prose-headings: var(--color-gray-200);
-    --tw-prose-body: var(--color-gray-300);
-  }
 } */
+
+/* example of how to customise the typography plugin settings */
+.prose-gray {
+  /* --tw-prose-headings: var(--color-white);
+  --tw-prose-body: var(--color-body); */
+
+  h1 {
+    @apply text-7xl lg:text-8xl mb-0;
+  }
+
+  h2 {
+    @apply text-6xl m-0;
+  }
+}
