refactor: remove lazy loading from hero image

--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -15,12 +15,7 @@
     <a class="btn" href="#about">More About Us</a>
   </div>
   <div>
-    <img
-      class="rounded-xl !m-0"
-      src="/images/hero-img.png"
-      alt="Hero image"
-      loading="lazy"
-    />
+    <img class="rounded-xl !m-0" src="/images/hero-img.png" alt="Hero image" />
   </div>
 </div>
 {{> logocloud logos=logos }}
